[tool.poetry]
name = "vitasdk-db-tools"
version = "0.1.0"
description = "Tools to work with the vitasdk db.yml"
authors = ["devnoname120 <devnoname120+gh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.7"
"ruamel.yaml" = "^0.15.87"
requests = "^2.21"
regex = "^2019.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
